	PR c++/29039 	* typeck2.c (build_functional_cast): Don't zero-initialize 	non-PODs; instead, call their constructors. 	* method.c (synthesize_method): Always build mem-initializers, if 	we're synthesizing the default constructor. 	PR c++/29039 	* g++.dg/init/ctor8.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117834 138bc75d-0d04-0410-961f-82ee72b054a4